--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ PyGithub = "^1.55"
 sh = "^1.14.3"
 toml = "^0.10.2"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^22.6.0"
 isort = "^5.10.1"
 pre-commit = "^2.20.0"
